# pevi_editor

./: .gitignore  BUILD_TEST_REPORT.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  GEMINI.md  MANAGER.md  TODO.md  compile_commands.json  debug_demo  debug_demo.c  vcpkg.json
.cache/clangd/index/: main.c.005EB57E87C8DDE8.idx
debug_demo.dSYM/Contents/: Info.plist
debug_demo.dSYM/Contents/Resources/DWARF/: debug_demo
debug_demo.dSYM/Contents/Resources/Relocations/aarch64/: debug_demo.yml
docs/: ARCHITECTURE.md  ECS.md  ECS_FLECS.md  EXAMPLES_PLAN.md  PROJECT_STRUCTURE.md  README.md
examples/: CMakeLists.txt  flecs.c  flecs_basic_entity_component.c  flecs_hierarchy.c  flecs_pevi_basic.c  flecs_simple_system.c  joltc.c  libuv_example.c  msdf_text_3d.c  raylib.c
examples/ecs_complete/: CMakeLists.txt  README.md  main.c  main.c.bak  simple_main.c
examples/ecs_complete/components/: spatial.c  spatial.h
examples/ecs_complete/systems/: core_systems.c  core_systems.h  file_loader.c  file_loader.h  observers.c  observers.h  prefabs.c  prefabs.h
src/: main.c
